# Learning-CMake

./: README.md
basics/: CMakeLists.txt  main.cpp
basics/cars/: CMakeLists.txt  car.cpp  car.h
build-configs/: CMakeLists.txt  main.cpp
clang-format/: CMakeLists.txt
clang-format/cmake/: Format.cmake
clang-format/src/: header.h  main.cpp
clang-tidy/: CMakeLists.txt
clang-tidy/cmake/: ClangTidy.cmake
clang-tidy/src/: CMakeLists.txt
cmake/: CMakeLists.txt  main.cpp
components/: CMakeLists.txt
components/src/: CMakeLists.txt  basic.cpp
config-file/: CMakeLists.txt
config-file-advanced/: CMakeLists.txt
config-file-advanced/src/: CMakeLists.txt  basic.cpp
config-file/src/: CMakeLists.txt
configure/: CMakeLists.txt  main.cpp
cpack/: CMakeLists.txt
cpack/src/: CMakeLists.txt
ctest-catch2/: CMakeLists.txt
ctest-catch2/src/: calc.cpp
ctest-catch2/test/: CMakeLists.txt  calc_test.cpp  run_test.cpp
ctest-gmock/: CMakeLists.txt
ctest-gmock/src/: CMakeLists.txt  calc.cpp  calc.h  rng.h  rng_mtprg.cpp  rng_mtprg.h  run.cpp
ctest-gmock/test/: CMakeLists.txt  calc_test.cpp  run_test.cpp
ctest-gmock/test/mocks/: rng_mock.h
ctest-googletest/: CMakeLists.txt
ctest-googletest/src/: run.cpp
ctest-googletest/test/: CMakeLists.txt  calc_test.cpp  run_test.cpp
ctest-noframework/: CMakeLists.txt
ctest-noframework/src/: CMakeLists.txt  calc.h  main.cpp
ctest-noframework/test/: CMakeLists.txt  calc_test.cpp  unit_tests.cpp
ctest-structured/: CMakeLists.txt
ctest-structured/test/: CMakeLists.txt  run_test.cpp  unit_tests.cpp
custom-command/: CMakeLists.txt  main.cpp
cxx-modules/: CMakeLists.txt  main.cxx  math.cxx
definitions/: CMakeLists.txt  configure.cpp  main.cpp
doxygen/: CMakeLists.txt
doxygen/cmake/: Doxygen.cmake
doxygen/src/: calc.h
dynamically-duplicate/: CMakeLists.txt  a.cpp  b.cpp  main.cpp
external-project/: CMakeLists.txt  config.yaml  main.cpp  yaml-cpp.in
fetch-content/: CMakeLists.txt
fetch-content-find-package/: CMakeLists.txt  main.cpp
find-package/: CMakeLists.txt  main.cpp
find-package-config/: CMakeLists.txt  main.cpp
find-package-custom/: CMakeLists.txt  README.md.autosave
find-package-custom/cmake/module/: FindPQXX.cmake
find-package-targets/: CMakeLists.txt  main.cpp
find-package-variables/: CMakeLists.txt  main.cpp  message.proto
generator-expressions/: CMakeLists.txt  main.cpp
install-directories/: CMakeLists.txt
install-directories/data/: data.csv
install-directories/etc/calc/: nested.conf
install-directories/src/include/calc/: calc.h
install-directories/src/include/calc/nested/: extended.h
install-export/: CMakeLists.txt
install-export/src/: CMakeLists.txt
install-files/: CMakeLists.txt
install-files/src/: CMakeLists.txt
install-files/src/include/calc/nested/: extended.h
install-targets/: CMakeLists.txt
install-targets/src/: CMakeLists.txt
install-targets/src/include/calc/: basic.h
libraries/: CMakeLists.txt  function_a.cpp  function_b.cpp  main.cpp
one-definition-rule/: CMakeLists.txt  one.cpp  shared.h
practical-example/: CMakeLists.txt
practical-example/cmake/: Format.cmake  Memcheck.cmake  buildinfo.h.in
practical-example/src/calc/: CMakeLists.txt  basic.cpp
practical-example/src/calc/include/calc/: basic.h
practical-example/src/calc_tui/: CMakeLists.txt
practical-example/src/calc_tui/include/: tui.h
practical-example/test/calc_tui/: CMakeLists.txt  console_test.cpp
presets/: CMakeLists.txt  CMakePresets.json
presets/cmake/: BuildInfo.cmake  Coverage.cmake  Doxygen.cmake  GetFTXUI.cmake  Testing.cmake
presets/src/: CMakeLists.txt
presets/src/calc_tui/: tui.cpp
presets/test/: CMakeLists.txt
presets/test/calc/: basic_test.cpp
propagated-properties/: CMakeLists.txt  main.cpp
sources/: CMakeLists.txt  gui_darwin.cpp  gui_linux.cpp  gui_windows.cpp  main.cpp
structure/: CMakeLists.txt
structure/src/: CMakeLists.txt  main.cpp
structure/src/include/: class_a.cpp  class_a.h  class_b.cpp  class_b.h
structure/src/lib1/: CMakeLists.txt  lib1.cpp  lib1.h
structure/src/lib2/: CMakeLists.txt  lib2.cpp  lib2.h
target-export/: CMakeLists.txt
target-export/src/: CMakeLists.txt  calc.cpp  extended.cxx  main.cpp
target-export/src/include/calc/: calc.h
targets/: CMakeLists.txt  calculations.cpp  calculations.h  drawing.cpp  drawing.h  gui.cpp  terminal.cpp
test-export/: CMakeLists.txt  main.cpp
testing/: CMakeLists.txt  main.cpp  program.cpp  test.cpp
unresolved/: CMakeLists.txt  main.cpp
valgrind-memcheck/: CMakeLists.txt
valgrind-memcheck/cmake/: Valgrind.cmake
valgrind-memcheck/src/: CMakeLists.txt  bootstrap.cpp  calc.cpp
valgrind-memcheck/test/: CMakeLists.txt
version-file/: CMakeLists.txt
version-file/src/: CMakeLists.txt
